--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ footer {
 }
 
 .card {
+  z-index: -1;
   float: left;
   margin: 20px;
   box-shadow: black 5px 5px 5px;
@@ -95,6 +96,16 @@ footer {
 #skills > h2 {
   color: white;
   margin-left: 15%;
+}
+
+#reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#reviews img {
+  width: 70%;
 }
 
 .cards {
@@ -202,5 +213,11 @@ footer {
 
   .humberger {
     display: block;
+  }
+}
+
+@media (min-width: 601px) {
+  .menu {
+    right: -70% !important;
   }
 }
